# class

./: .bash_history  .bashrc  .cortex-debug  .gitconfig  .gitmodules  .lesshst  CMakeLists.txt  README.md
.console-ninja/: hostRegister.json
class-main/class-main/pico_project/: .gitignore  CMakeLists.txt  howtopico.md
class-main/class-main/pico_project/src/: blink.c  main.c  motor2.c  picomoter.c
pico_project/: CMakeLists.txt  main.c  picomoter.c
pico_project/build_pico2w/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  my_project.dis  my_project.elf  my_project.elf.map  my_project.hex  my_project.uf2
pico_project/build_pico2w/pico-sdk/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/docs/: Makefile
pico_project/build_pico2w/pico-sdk/src/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/common/boot_picobin_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/boot_picoboot_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/boot_uf2_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/hardware_claim/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_base_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_binary_info/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_divider_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_stdlib_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_sync/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_time/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/common/pico_util/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2350/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/rp2350/hardware_regs/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/rp2350/hardware_structs/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/rp2350/pico_platform/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/cmsis/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_adc/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_base/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_dcp/: Makefile  cmake_install.cmake
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_divider/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_dma/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_exception/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_flash/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_interp/: Makefile
pico_project/build_pico2w/pico-sdk/src/rp2_common/hardware_irq/: Makefile
pico_project/build_pico2w/pico-sdk/tools/: Makefile
pico_project/moter2/: CMakeLists.txt  moter2.cpp
(+2421 files in other folders)
